# llm-colosseum

./: diambra_test.py  pyproject.toml  script.py  script_stream.py  stream_test.py
agent/: llm.py
eval/: game.py
notebooks/: new.ipynb
static/: index.html
